--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,7 +47,7 @@
 </nav>
 
 <!-- Сообщения -->
-<div class="container mt-4">
+<div class="container-xl mt-4">
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -60,9 +61,23 @@
     {% block content %}{% endblock %}
 </div>
 
-<!-- Bootstrap JS -->
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-</script>
+<!-- сортировка -->
+<div class="container mt-4">
+    <div class="d-flex justify-content-between">
+        <!-- Кнопка сортировки -->
+        <div>
+            <form method="get" action="{% url 'post_list' %}">
+                <select name="order_by" class="form-select" onchange="this.form.submit()">
+                    <option value="-created_at" {% if request.GET.order_by == '-created_at' %}selected{% endif %}>Sort by date (desc)</option>
+                    <option value="created_at" {% if request.GET.order_by == 'created_at' %}selected{% endif %}>Sort by date (asc)</option>
+                </select>
+            </form>
+        </div>
+    </div>
+</div>
+        <!-- Bootstrap JS -->
+        <script
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+        </script>
 </body>
 </html>
